SERVER-28646 Don't report ops as passed if logOps causes txn to fail

(cherry picked from commit d17d4907001cb02e3697148df4b3016ac232d0a1)

Conflicts:
	src/mongo/db/catalog/apply_ops.cpp